TinyMCE 4.0.1~core3

	* Make use of the namespace versions of View instead of static.
	-- Charlie Powell <charlie@eval.bz>  Sat, 31 Aug 2013 17:49:15 -0400

TinyMCE 4.0.1~core2

	* Moved the navigator functionality into the Media Manager component.
	-- Charlie Powell <charlie@eval.bz>  Sat, 20 Jul 2013 04:45:27 -0400

TinyMCE 4.0.1~core1

	* [Bug] Fixed Bug #254 - TinyMCE File browser needs to be alphabetical
	* [Bug] Fixes in the navigator to ensure that files are prepended with the correct directory name.
	  This was causing issues from changing to the top directory "" or ".", and the system not recognizing
	  that path translated to public/tinymce.
	* Minor style tweaks to the navigator icon and list views.
	* Updated TinyMCE to 4.0.1 from upstream.
	-- Charlie Powell <charlie@eval.bz>  Mon, 08 Jul 2013 12:01:11 -0400

TinyMCE 4.0.0b3~core2

	* [Bug] Set the pop-up pages to be not recorded in page navigation.
	* [Bug] Fixed file names that are uploaded to a directory where the script may not append the
	  directory with a trailing slash.
	* [Feature] Added a new stylesheet that can be overwrote; tinymce/content.css.  This provides the
	  ability for themes to specify the site styles to be used inside of editors.
	* Rearranged the stylesheets a little
	-- Charlie Powell <charlie@eval.bz>  Sun, 09 Jun 2013 21:37:09 -0400

TinyMCE 4.0.0b3~core1

	* [Feature] New UI
	* [Feature] New page for managing the public files
	* [Feature] New config options for TinyMCE
	* [Feature] New image selector popup
	* Updated to newest version of TinyMCE.
	-- Charlie Powell <charlie@eval.bz>  Wed, 05 Jun 2013 05:12:25 -0400

TinyMCE 4.0.0~core1

	* First stable release of the 4.0 tree.
	* Removed some legacy code that wasn't being used anymore.
	-- Charlie Powell <charlie@eval.bz>  Wed, 19 Jun 2013 04:50:28 -0400

TinyMCE 3.5.6~core6

	* Minor tweak to keep up to date with the new namespaced features.
	-- Charlie Powell <charlie@eval.bz>  Mon, 15 Apr 2013 15:36:18 -0400
