@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!DOCTYPE component PUBLIC "SYSTEM" "http://corepl.us/api/2_4/component.dtd">
-<component xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="4.0.1~core3" name="TinyMCE" execmode="web">
+<component xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="4.0.1-1~bpo268" name="TinyMCE" execmode="web">
 	<requires>
 		<require name="core" type="component" version="2.5.1"/>
 		<require name="jquery" type="library"/>
@@ -20,12 +20,13 @@
 		<file filename="templates/pages/tinymce/link.phtml" md5="524d952e87774b2bafd2324e7c15274b"/>
 	</view>
 	<files>
-		<file filename="CHANGELOG" md5="c2895e380c7a2d8172016ab094513279"/>
+		<file filename="CHANGELOG" md5="d4880f032c4ecf145849927a187e8dea"/>
 		<file filename="LICENSE.TXT" md5="045d04e17422d99e338da75b9c749b7c"/>
 		<file filename="TinyMCEFormElement.class.php" md5="5c3eccd47fabc69634e956046b08ee73">
 			<class name="TinyMCEFormElement"/>
 		</file>
 		<file filename="changelog.txt" md5="4d7505646c4aa7e07037ad0b773dd681"/>
+		<file filename="component.xml" md5="34ddaf3a1c45f0695b3354d0d310402d"/>
 		<file filename="controllers/TinyMCEController.php" md5="5dd2945866df74f2b3bea7a28db19fd4">
 			<controller name="TinyMCEController"/>
 		</file>
@@ -40,7 +41,7 @@
 		<file filename="assets/js/tinymce/jquery.tinymce.min.js" md5="c3b150836f2c5b282f8f24f200931c37"/>
 		<file filename="assets/js/tinymce/langs/readme.md" md5="a803b8446c1cdbaa1984d49b92bb8001"/>
 		<file filename="assets/js/tinymce/license.txt" md5="045d04e17422d99e338da75b9c749b7c"/>
-		<file filename="assets/js/tinymce/plugins/advlinkcoreplus/css/advlink.css" md5="aaf226732a7b4ae80ee680700f488a1e"/>
+		<file filename="assets/js/tinymce/plugins/advlinkcoreplus/css/advlink.css" md5="19558f5e2b7a7d11968aacdc37e6e436"/>
 		<file filename="assets/js/tinymce/plugins/advlinkcoreplus/editor_plugin.js" md5="5cb02a450489e9392c5bf29a83c720c4"/>
 		<file filename="assets/js/tinymce/plugins/advlinkcoreplus/editor_plugin_src.js" md5="5cb02a450489e9392c5bf29a83c720c4"/>
 		<file filename="assets/js/tinymce/plugins/advlinkcoreplus/js/advlink.js" md5="0e5118b55c89d8b47155154fbde8b70a"/>
@@ -224,10 +225,12 @@
 			</dataset>
 		</upgrade>
 		<upgrade from="4.0.1~core2" to="4.0.1~core3"/>
+		<upgrade from="4.0.1~core3" to="4.0.1-1~bpo268"/>
 	</upgrades>
 	<description>
 		This component provides the WYSIWYG text editor for textareas
 	</description>
+	<smartyplugins/>
 	<authors>
 		<author name="Charlie Powell" email="charlie@eval.bz"/>
 	</authors>
